package terminus.content;

public class Note extends Content {

    public static final String TYPE = "N";

    public Note(String name, String data) {
        super(name, data);
    }
}
